--- a/memory.html
+++ b/memory.html
@@ -129,8 +129,8 @@
        
       </div>
       <div class="row row-cols-auto p-3 mt-3"> 
-        <div nbclass="col">Nombre de coups :</div>
-        <div class="counter col shadow-sm">0</div>
+        <div class="col">Nombre de coups :</div>
+        <div id="clic-counter" class="counter col shadow-sm">0</div>
       </div>
     </section> 
     <section class="container-fluid">
