bugfixes by preventing undesired clicks

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <header class="container-fluid">   
     <div class="row justify-content-between">
       <div class="col-2 p-3">
-        <a class="" href="#"><img src="Ressources/Images/Logo-Tikiti.png" id="logo"></a>
+        <a class="" href="index.html"><img src="Ressources/Images/Logo-Tikiti.png" id="logo"></a>
       </div>
       <div class="col-1 m-3">
         <h4 data-bs-toggle="modal" data-bs-target="#rules-modal" id="rules"><u>Règles</u></h4>
