--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
       </div>
     </section> 
     <section class="container-fluid row justify-content-evenly gx-5">
-      <div class="col">
-        <div id="player-1" class="p-3 current-player">
+      <div class="col" id="player-1">
+        <div class="p-3 player-box current-player">
           <h4 class="text-center pb-3">Joueur 1</h4>
           <div class="row row-cols-auto justify-content-center gy-3" id="found-pairs-player-1"></div> 
         </div>  
       </div>          
-     <div class="col">
-       <div id="player-2" class= "p-3">
+     <div class="col" id="player-2">
+       <div class= "p-3 player-box">
          <h4 class="text-center pb-3">Joueur 2</h4>
          <div class="row row-cols-auto justify-content-center gy-3" id="found-pairs-player-2"></div> 
        </div>  
